--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -39,17 +40,23 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "critters": "^0.0.23",
     "date-fns": "4.1.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
     "input-otp": "1.4.1",
+    "jose": "^6.1.2",
     "lucide-react": "^0.454.0",
+    "mailtrap": "^4.3.0",
     "next": "15.2.4",
     "next-themes": "latest",
+    "nodemailer": "^7.0.10",
+    "prisma": "^6.19.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
