--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
+    "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
     "jose": "^6.1.2",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.454.0",
     "mailtrap": "^4.3.0",
     "next": "15.2.4",
