--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "latest",
     "@radix-ui/react-alert-dialog": "1.1.4",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.1.2",
     "@radix-ui/react-aspect-ratio": "1.1.1",
     "@radix-ui/react-avatar": "1.1.2",
     "@radix-ui/react-checkbox": "1.1.3",
@@ -38,28 +41,21 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@types/nodemailer": "^6.4.21",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
-    "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "critters": "^0.0.23",
     "date-fns": "4.1.0",
-    "dotenv": "^17.2.3",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "input-otp": "1.4.1",
-    "jose": "^6.1.2",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.454.0",
-    "mailtrap": "^4.3.0",
     "next": "15.2.4",
     "next-themes": "latest",
-    "nodemailer": "^7.0.10",
-    "prisma": "^6.19.0",
     "react": "^19",
     "react-day-picker": "9.8.0",
     "react-dom": "^19",
