--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "prisma generate && next build --webpack",
+    "build": "next build --webpack",
     "dev": "next dev --webpack",
     "lint": "eslint .",
     "start": "next start",
-    "postinstall": "prisma generate && prisma migrate"
+    "db:push": "prisma db push",
+    "db:migrate": "prisma migrate deploy",
+    "db:generate": "prisma generate"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
